8223638: Replace wildcard address with loopback or local host in tests - part 6
Reviewed-by: dfuchs